--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-APP_HOST=localhost
-APP_PORT=3333
-APP_PROTOCOL=http
-APP_SECRET=someHashString
+# APP VARIABLES
+APP_HOST=0.0.0.0
+APP_PORT=3000
+X_API_TOKEN=someHashString
+
+# API VARIABLES
+API_HOST=0.0.0.0
+API_PORT=3001
+API_PROTOCOL=http
+API_SECRET=someHashString
 DB_HOST=postgresdb
 DB_PORT=5432
 DB_USER=docker
