--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,19 @@ services:
       context: .
       dockerfile: ./Dockerfile
     ports:
-      - 3000:3000
+      - ${APP_PORT}:${APP_PORT}
     networks: 
       - app
     depends_on: 
       - api_v1
     volumes: 
       - .:/usr/app
+    restart: on-failure
 
   api_v1:
-    image: gabrieljsilva/austromiautas
+    image: gabrieljsilva/austromiautas:1.0.1
     ports: 
-      - 3333:3333
+      - ${API_PORT}:${API_PORT}
     networks: 
       - app
     depends_on: 
@@ -25,6 +26,11 @@ services:
       - redisdb
     env_file: 
       - .env
+    environment: 
+    - APP_HOST=${API_HOST}
+    - APP_PORT=${API_PORT}
+    - APP_PROTOCOL=${API_PROTOCOL}
+    - APP_SECRET=${API_SECRET}
 
   postgresdb:
     image: postgres:13.1-alpine
