--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
@@ -30,7 +31,7 @@
     "eslint-plugin-vue": "^7.5.0",
     "fibers": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.7",
-    "sass-loader": "^10.1.1"
+    "sass": "^1.32.8",
+    "sass-loader": "10"
   }
 }
