--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     restart: on-failure
 
   api_v1:
-    image: gabrieljsilva/austromiautas:1.0.1
+    image: gabrieljsilva/austromiautas
     ports: 
       - ${API_PORT}:${API_PORT}
     networks: 
@@ -31,6 +31,7 @@ services:
     - APP_PORT=${API_PORT}
     - APP_PROTOCOL=${API_PROTOCOL}
     - APP_SECRET=${API_SECRET}
+    - NODE_ENV=development
 
   postgresdb:
     image: postgres:13.1-alpine
