--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     restart: on-failure
 
   api_v1:
-    image: gabrieljsilva/austromiautas
+    image: gabrieljsilva/austromiautas:1.0.7
     ports: 
       - ${API_PORT}:${API_PORT}
     networks: 
@@ -31,7 +31,8 @@ services:
     - APP_PORT=${API_PORT}
     - APP_PROTOCOL=${API_PROTOCOL}
     - APP_SECRET=${API_SECRET}
-    - NODE_ENV=development
+    - ALLOW_INSECURE_REQUESTS=true
+    restart: always
 
   postgresdb:
     image: postgres:13.1-alpine
