--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
+    "vueperslides": "^2.13.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
